--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico">
 </head>
 <body>
+    <div class="bg"></div>
     <div class="conteneur">
         <img src="assets/images/tshirt_final_xl_sans_texte.png" id="main" />
 
@@ -39,7 +40,7 @@
             marquee_1.style.display = '';
             setTimeout(function() {
                 marquee_2.style.display = '';
-            }, 2800);
+            }, 2500);
         }, 100);
 
         var cancelInterval = setInterval(function() {
